--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2",
     "webpack": "^4.28.3"
+  },
+  "dependencies": {
+    "masonry-layout": "^4.2.2"
   }
 }
